# chat-app

./: .env.local  Dockerfile.server  docker-compose.yml
server/: Cargo.toml
server/src/: main.rs
