[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
runtime-tokio = "0.0.0"
sqlx = { version = "0.7.4", features = ["postgres"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
